# li

./: BREW_INSTALL.md  Cargo.toml  HOMEBREW_SETUP.md  INSTALL.md  Makefile  README.md  install.sh  li.rb  recovery_refactor_proposal.md  release-update.sh  rust_syntax_guide.md  validator_functionality_guide.md
.cursor/rules/: general.md
.github/workflows/: release.yml
documentation/: architecture-overview.md  architecture.md  example-config.json  future_plans.md  implementation-plan.md  prd.md
documentation/archive/: recovery_functionality_guide.md  recovery_refactor_summary.md  validator_refactor_proposal.md
homebrew-li/: README.md  li.rb
src/: cerebras.rs  cli.rs  client.rs  config.rs  main.rs  tokens.rs
src/agent/: adapters.rs  context.rs  mod.rs  orchestrator.rs  outcome.rs  stages.rs  tests.rs  types.rs
src/classifier/: mod.rs
src/cli/: args.rs  chat.rs  commands.rs  config_cmd.rs  intelligence.rs  mod.rs  models.rs  providers.rs  runtime.rs  setup.rs  task.rs  util.rs
src/config/: builder.rs  constants.rs  defaults.rs  environment.rs  loader.rs  mod.rs  tests.rs  types.rs  validation.rs
src/exec/: mod.rs
src/hook/: mod.rs
src/planner/: mod.rs  parsing.rs  prompt.rs  session.rs  tests.rs  transport.rs  types.rs
src/recovery/: ai.rs  mod.rs  tests.rs  types.rs  ui.rs  utils.rs
src/validator/: checker.rs  mod.rs  tests.rs  types.rs
