[package]
name = "li"
version = "0.1.1"
edition = "2024"
description = "AI-powered CLI assistant that converts natural language to shell commands"
repository = "https://github.com/bitrifttech/li"
license = "MIT"
authors = ["bitrifttech"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.12"
httpmock = "0.7"
